--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -225,6 +225,7 @@ jobs:
           install: >-
             wget
             unzip
+            gcc
             mingw-w64-i686-libmad
             mingw-w64-i686-libsndfile
             mingw-w64-i686-flac
