--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,7 +153,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: $(( matrix.task ))
-          path: ${{ env.INSTALL_ROOT} }}/*
+          path: ${{ env.INSTALL_ROOT }}/*
       - name: Test
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
         run: make check
