Build AppImage as artifact.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,14 +146,35 @@ jobs:
 
       - name: Install
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
-        run: mkdir -p ${INSTALL_ROOT} && make INSTALL_ROOT=${INSTALL_ROOT} install
+        run: |
+          make INSTALL_ROOT=${INSTALL_ROOT} install
+          cp -v resources/icons/svg/qlcplus.svg ${INSTALL_ROOT}
+          cp -v platforms/linux/qlcplus.desktop ${INSTALL_ROOT}
+          if [ "compile-qt5qml" == "${{ matrix.task }}" ]; then sed -i -e 's/Exec=qlcplus --open %f/Exec=qlcplus-qml/g' $TARGET_DIR/qlcplus.desktop; fi
 
-      - name: Store Artifacts
+      - name: Store build artifacts
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
         uses: actions/upload-artifact@v3
         with:
-          name: $(( matrix.task ))
+          name: ${{ matrix.task }}-files
           path: ${{ env.INSTALL_ROOT }}/*
+
+      - name: Build AppImage
+        if: ${{ ! startsWith( matrix.task, 'coverage') }}
+        run: |
+          wget -c https://github.com/AppImage/AppImageKit/releases/download/continuous/AppRun-x86_64 -O $TARGET_DIR/AppRun
+          chmod a+x ${INSTALL_ROOT}/AppRun
+          wget -c https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage -O ./appimagetool-x86_64.AppImage
+          chmod a+x ./appimagetool-x86_64.AppImage
+          ./appimagetool-x86_64.AppImage -v $TARGET_DIR
+
+      - name: Store AppImage artifacts
+        if: ${{ ! startsWith( matrix.task, 'coverage') }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ matrix.task }}-AppImage
+          path: Q_Light_Controller_Plus-x86_64.AppImage
+
       - name: Test
         if: ${{ ! startsWith( matrix.task, 'coverage') }}
         run: make check
