Do not strip coverage build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,21 +157,14 @@ jobs:
         run: |
           sed -i -e 's/Exec=qlcplus --open %f/Exec=qlcplus-qml/g' ${INSTALL_ROOT}/qlcplus.desktop
 
-      - name: Store build artifacts
-        if: false && ${{ ! startsWith( matrix.task, 'coverage') }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ matrix.task }}-files
-          path: ${{ env.INSTALL_ROOT }}/*
-
       - name: Strip Binaries (qt5)
-        if: ${{ matrix.task == 'coverage-qt5' }}
+        if: ${{ ! matrix.task == 'compile-qt5' }}
         run: |
           strip -v ${INSTALL_ROOT}/usr/bin/qlcplus
           find ${INSTALL_ROOT}/usr/lib/ -name libqlcplusengine.so.1.0.0 -exec strip -v {} \;
 
       - name: Strip Binaries (qt5qml)
-        if: ${{ matrix.task == 'coverage-qt5qml' }}
+        if: ${{ matrix.task == 'compile-qt5qml' }}
         run: |
           strip -v ${INSTALL_ROOT}/usr/bin/qlcplus-qml
           find ${INSTALL_ROOT}/usr/lib/ -name libqlcplusengine.so.1.0.0 -exec strip -v {} \;
