--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
           source $GITHUB_ENV && echo "QMAKE=${QTDIR}/bin/qmake" >> $GITHUB_ENV
 
       - name: Set QT ENV variables (qt5qml)
-        if: ${{ ! endsWith( matrix.task, 'qt5qml') }}
+        if: ${{ endsWith( matrix.task, 'qt5qml') }}
         run: |
           echo "QT_VERSION=6.4.2" >> $GITHUB_ENV
           echo "QT_MODULES_INSTALL=$(echo ${QT_MODULES})" >> $GITHUB_ENV
